--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -1261,6 +1261,17 @@ check_bestcost(result_list_bestcost = comparison_deaths_lifetable_pif_geo ,
 
 ```
 
+```{r Illustration integrate compare() in attribute()}
+
+# Benefit of this: compare the two conceptionally different approaches
+ 
+# case1 <- attribute(approach= cutoff in exposure)
+
+# case2 <- attribute(approach = delta approach/cutoff in ERF)
+
+# difference impact <- case1[[impact]] - case2[[impact]]
+```
+
 
 
 ```{r comparison yll lifetable}
