New argument `approach_exposure` added to all `attribute_..._lifetable()`, `attribute()`, `compile_input`
The new argument has the options `"constant"` and "`single_year`".
Updated package documentation.
At a later stage, the argument should be added to the `compare_...()` functions as well.

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -581,6 +581,7 @@ for(d in c("natural", "total")){
 
 bestcost_pm_yll_lifetable_airqplus <-
   bestcost::attribute_yll_from_lifetable(
+    approach_exposure = "constant",
     exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration,
     cutoff = airqplus_pm_deaths_yll[["input"]]$cut_off_value,
     rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
