Additional explanations added to `single_year_exposure.Rmd` Excel giving overview of lifetable features of the main approaches added

--- a/r_package/testing/Preparation of input data.Rmd
+++ b/r_package/testing/Preparation of input data.Rmd
@@ -1114,6 +1114,6 @@ rm(list=setdiff(ls(),
                   "check_bestcost",
                   "runif_with_seed"
                   )))
-save.image(file = "../testing/input/data/input_data_for_testing_Rpackage.RData")
+# save.image(file = "../testing/input/data/input_data_for_testing_Rpackage.RData")
 ```
 
