--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -240,8 +240,6 @@ bestcost_noise_ihd_expDist_geo <-
     geo_id_aggregated = rep("ch", 3),
     info = data.frame(pollutant = "road_noise", outcome = "highly_annoyance"))
 
-                                               
-
 ```
 
 
@@ -779,6 +777,7 @@ bestcost_pm_yld_lifetable_geluft  <-
     rr_upper =input_data_mortality[2,"rr_upper"], 
     erf_increment = 10, 
     erf_shape = "log_linear",
+    approach_exposure = "single_year",
     first_age_pop = 0,
     last_age_pop = 99,
     prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
@@ -855,7 +854,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_daly_lifetable_geluft,
 
 comparison_singlebhd_rr_delta <-
   bestcost::compare_health(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = 8.85, 
     exp_central_2 = 6,
     cutoff = 5,    
@@ -877,7 +876,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_rr_delta ,
 # With iteration
 comparison_singlebhd_rr_delta_geo <-
   bestcost::compare_health(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = list(8.85, 8.0),
     exp_central_2 = list(6, 6.5),
     cutoff = 5,    
@@ -902,7 +901,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_rr_delta_geo ,
 # Test pif comparison function with fake values
 comparison_singlebhd_rr_pif <-
   bestcost::compare(
-    comparison_method = "pif",
+    approach_comparison = "pif",
     exp_central_1 = 8.85, 
     exp_central_2 = 6,
     cutoff = 5,    
@@ -924,7 +923,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_rr_pif ,
 # With iteration
 comparison_singlebhd_rr_pif_geo <-
   bestcost::compare_health(
-    comparison_method = "pif",
+    approach_comparison = "pif",
     exp_central_1 = list(8.85, 8.0),
     exp_central_2 = list(6, 6.5),
     cutoff = 5,    
@@ -951,7 +950,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_rr_pif_geo ,
 # Assess iteration in many geographical areas (geo_id) keeping the multiple uncertainties
 comparison_singlebhd_rr_geo <-
   bestcost::compare_health(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)),
     exp_lower_1 = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)-0.1),
     exp_upper_1 = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)+0.1),
@@ -983,7 +982,7 @@ comparison_singlebhd_rr_geo <-
 # No PIF option in ar
 comparison_singlebhd_ar_delta <-
   bestcost::compare_health_ar(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = c(57.5, 62.5, 67.5, 72.5, 77.5),# Values as example provided by NIPH
     exp_central_2 = c(50, 55, 60, 65, 75), # Fake values
     pop_exp_1 = c(387500, 286000, 191800, 72200, 7700), # Values as example provided by NIPH
@@ -999,7 +998,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_ar_delta ,
 
 comparison_singlebhd_ar_delta_geo <-
   bestcost::compare_health_ar(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = list(c(57.5, 62.5, 67.5, 72.5, 77.5), c(57, 62, 67, 72, 77)),# Fake values
     exp_central_2 = list(c(50, 55, 60, 65, 75), c(50.5, 55.5, 60.5, 65.5, 75.5)), # Fake values
     pop_exp_1 = list(c(387500, 286000, 191800, 72200, 7700), c(380000, 280000, 190800, 72000, 7000)), # Fake values
@@ -1021,7 +1020,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_ar_delta_geo ,
 # Test delta comparison function with fake values
 comparison_yld_singlebhd_rr_delta <-
   bestcost::compare_yld_from_prevalence(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = 8.85, 
     exp_central_2 = 6,
     cutoff = 5,    
@@ -1049,7 +1048,7 @@ check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_delta[["detail
 # Iteration
 comparison_yld_singlebhd_rr_delta_geo <-
   bestcost::compare_yld_from_prevalence(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = list(8.85, 8.0),
     exp_central_2 = list(6, 6.5),
     cutoff = 5,    
@@ -1076,7 +1075,7 @@ check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_delta_geo ,
 # Test pif comparison function with fake values
 comparison_yld_singlebhd_rr_pif <-
   bestcost::compare_yld_from_prevalence(
-    comparison_method = "pif",
+    approach_comparison = "pif",
     exp_central_1 = 8.85,  
     exp_central_2 = 6,
     cutoff = 5,    
@@ -1106,7 +1105,7 @@ check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_pif[["detailed
 # Iteration
 comparison_yld_singlebhd_rr_pif_geo <-
   bestcost::compare_yld_from_prevalence(
-    comparison_method = "pif",
+    approach_comparison = "pif",
     exp_central_1 = list(8.85, 8.0),
     exp_central_2 = list(6, 6.5),
     cutoff = 5,    
@@ -1138,7 +1137,7 @@ check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_pif_geo ,
 
 comparison_deaths_lifetable_delta <-
   bestcost::compare_deaths_from_lifetable(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
     exp_central_2 = 6, # Fake data just for testing purposes
@@ -1183,7 +1182,7 @@ check_bestcost(result_list_bestcost = comparison_deaths_lifetable_delta[["detail
 # Iteration
 comparison_deaths_lifetable_delta_geo <-
   bestcost::compare_deaths_from_lifetable(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
@@ -1229,7 +1228,7 @@ comparison_deaths_lifetable_delta_geo[["detailed"]][["scenario_1"]][["detailed"]
 
 comparison_deaths_lifetable_pif  <-
   bestcost::compare_deaths_from_lifetable(
-    comparison_method = "pif",
+    approach_comparison = "pif",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
     exp_central_2 = 6, # Fake data just for testing purposes
@@ -1275,7 +1274,7 @@ check_bestcost(result_list_bestcost = comparison_deaths_lifetable_pif[["detailed
 # Iteration
 comparison_deaths_lifetable_pif_geo <-
   bestcost::compare_deaths_from_lifetable(
-    comparison_method = "pif",
+    approach_comparison = "pif",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
@@ -1334,7 +1333,7 @@ check_bestcost(result_list_bestcost = comparison_deaths_lifetable_pif_geo ,
 # DELTA 
 comparison_yll_lifetable_delta  <-
   bestcost::compare_yll_from_lifetable(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
     exp_central_2 = 6, # Fake data just for testing purposes
@@ -1381,7 +1380,7 @@ check_bestcost(result_list_bestcost = comparison_yll_lifetable_delta[["detailed"
 # Iteration
 comparison_yll_lifetable_delta_geo <-
   bestcost::compare_yll_from_lifetable(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
@@ -1422,7 +1421,7 @@ check_bestcost(result_list_bestcost = comparison_yll_lifetable_delta_geo ,
 # PIF
 comparison_yll_lifetable_pif <-
   bestcost::compare_yll_from_lifetable(
-    comparison_method = "pif",
+    approach_comparison = "pif",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
     exp_central_2 = 6, # Fake data just for testing purposes
@@ -1469,7 +1468,7 @@ check_bestcost(result_list_bestcost = comparison_yll_lifetable_pif[["detailed"]]
 # Iteration
 comparison_yll_lifetable_pif_geo <-
   bestcost::compare_yll_from_lifetable(
-    comparison_method = "pif",
+    approach_comparison = "pif",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
@@ -1519,7 +1518,7 @@ check_bestcost(result_list_bestcost = comparison_yll_lifetable_pif_geo ,
  
 comparison_yld_lifetable_delta  <-
   bestcost::compare_yld_from_lifetable(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
     exp_central_2 = 6, # Fake data just for testing purposes
@@ -1568,7 +1567,7 @@ check_bestcost(result_list_bestcost = comparison_yld_lifetable_delta[["detailed"
 # Iteration
 comparison_yld_lifetable_delta_geo <-
   bestcost::compare_yld_from_lifetable(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
@@ -1612,7 +1611,7 @@ check_bestcost(result_list_bestcost = comparison_yld_lifetable_delta_geo ,
 # PIF
 comparison_yld_lifetable_pif <-
   bestcost::compare_yld_from_lifetable(
-    comparison_method = "pif",
+    approach_comparison = "pif",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
     exp_central_2 = 6, # Fake data just for testing purposes
@@ -1662,7 +1661,7 @@ check_bestcost(result_list_bestcost = comparison_yld_lifetable_pif[["detailed"]]
 # Iteration
 comparison_yld_lifetable_pif_geo <-
   bestcost::compare_yld_from_lifetable(
-    comparison_method = "pif",
+    approach_comparison = "pif",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
@@ -1711,7 +1710,7 @@ check_bestcost(result_list_bestcost = comparison_yld_lifetable_pif_geo ,
  
 comparison_daly_lifetable_delta  <-
   bestcost::compare_daly_from_lifetable(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
     exp_central_2 = 6, # Fake data just for testing purposes
@@ -1760,7 +1759,7 @@ check_bestcost(result_list_bestcost = comparison_daly_lifetable_delta[["detailed
 # Iteration
 comparison_daly_lifetable_delta_geo <-
   bestcost::compare_daly_from_lifetable(
-    comparison_method = "delta",
+    approach_comparison = "delta",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
@@ -1804,7 +1803,7 @@ check_bestcost(result_list_bestcost = comparison_daly_lifetable_delta_geo ,
 # PIF
 comparison_daly_lifetable_pif <-
   bestcost::compare_daly_from_lifetable(
-    comparison_method = "pif",
+    approach_comparison = "pif",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
     exp_central_2 = 6, # Fake data just for testing purposes
@@ -1854,7 +1853,7 @@ check_bestcost(result_list_bestcost = comparison_daly_lifetable_pif[["detailed"]
 # Iteration
 comparison_daly_lifetable_pif_geo <-
   bestcost::compare_daly_from_lifetable(
-    comparison_method = "pif",
+    approach_comparison = "pif",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
