--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -358,7 +358,7 @@ if(all((bestcost_prob_dying$prob_dying -
 
 #### Premature deaths
 
-```{r premature deaths with lifetable}
+```{r premature deaths with lifetable airqplus input}
 # First obtain probability of dying 
 # for total and natural deaths and for male and female separately
 # (AirQ+ does not use probability of dying as input data but bestcost does)
@@ -394,6 +394,8 @@ bestcost_pm_deaths_lifetable_airqplus <-
     erf_shape = gsub("-", "_", airqplus_pm_deaths_yll[["input"]]$calculation_method),
     first_age_pop = first(airqplus_pm_deaths_yll[["pop"]]$age_from...),
     last_age_pop = last(airqplus_pm_deaths_yll[["pop"]]$age_from...),
+    # deaths_male = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    # deaths_female = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male = prob_dying[["natural"]][["male"]]$prob_dying,
     prob_natural_death_female = prob_dying[["natural"]][["female"]]$prob_dying,
     prob_total_death_male = prob_dying[["total"]][["male"]]$prob_dying,
@@ -410,7 +412,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_airqplus,
 
 
 
-```{r premature deaths with lifetable}
+```{r premature deaths with lifetable geluft input}
 # Now with input data from the Swiss project GeLuft
 
 
@@ -486,66 +488,65 @@ check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_geluft ,
 # Calculate years of life lost using bestcost function
 # and input data from an AirQ+ case
 
-bestcost_pm_yll_lifetable_airqplus_org <-
-  bestcost::attribute_yll_from_lifetable(
-    exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration,
-    cutoff = airqplus_pm_deaths_yll[["input"]]$cut_off_value,
-    rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
-    rr_lower = airqplus_pm_deaths_yll[["input"]]$relative_risk_lower,
-    rr_upper = airqplus_pm_deaths_yll[["input"]]$relative_risk_upper,
-    erf_increment = 10,
-    erf_shape = gsub("-", "_", airqplus_pm_deaths_yll[["input"]]$calculation_method),
-    first_age_pop = first(airqplus_pm_deaths_yll[["pop"]]$age_from...),
-    last_age_pop = last(airqplus_pm_deaths_yll[["pop"]]$age_from...),
-    prob_natural_death_male = prob_dying[["natural"]][["male"]]$prob_dying,
-    prob_natural_death_female = prob_dying[["natural"]][["female"]]$prob_dying,
-    prob_total_death_male = prob_dying[["total"]][["male"]]$prob_dying,
-    prob_total_death_female = prob_dying[["total"]][["female"]]$prob_dying,
-    population_midyear_male = airqplus_pm_deaths_yll[["pop"]]$midyear_population_male,
-    population_midyear_female = airqplus_pm_deaths_yll[["pop"]]$midyear_population_female,
-    year_of_analysis =  airqplus_pm_deaths_yll[["input"]]$start_year,
-    min_age = airqplus_pm_deaths_yll[["input"]]$apply_rr_from_age)
+# bestcost_pm_yll_lifetable_airqplus_org <-
+#   bestcost::attribute_yll_from_lifetable(
+#     exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration,
+#     cutoff = airqplus_pm_deaths_yll[["input"]]$cut_off_value,
+#     rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
+#     rr_lower = airqplus_pm_deaths_yll[["input"]]$relative_risk_lower,
+#     rr_upper = airqplus_pm_deaths_yll[["input"]]$relative_risk_upper,
+#     erf_increment = 10,
+#     erf_shape = gsub("-", "_", airqplus_pm_deaths_yll[["input"]]$calculation_method),
+#     first_age_pop = first(airqplus_pm_deaths_yll[["pop"]]$age_from...),
+#     last_age_pop = last(airqplus_pm_deaths_yll[["pop"]]$age_from...),
+#     prob_natural_death_male = prob_dying[["natural"]][["male"]]$prob_dying,
+#     prob_natural_death_female = prob_dying[["natural"]][["female"]]$prob_dying,
+#     prob_total_death_male = prob_dying[["total"]][["male"]]$prob_dying,
+#     prob_total_death_female = prob_dying[["total"]][["female"]]$prob_dying,
+#     population_midyear_male = airqplus_pm_deaths_yll[["pop"]]$midyear_population_male,
+#     population_midyear_female = airqplus_pm_deaths_yll[["pop"]]$midyear_population_female,
+#     year_of_analysis =  airqplus_pm_deaths_yll[["input"]]$start_year,
+#     min_age = airqplus_pm_deaths_yll[["input"]]$apply_rr_from_age)
 
 # Check results
 # They are extremely different. The methodology of airq+ is very different to other studies
 # AirQ+ considers that the increase/decrease of exposure happens 100 years,
 # while other studies (e.g. GeLuft) look at the impact over 100 years of a one-year exposure.
 
-check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_airqplus_org,
-               result_vector_alternative =
-                 c(airqplus_pm_deaths_yll[["output"]]$value_central_allgenders_yll_over_100_years_age_20_99,
-                   airqplus_pm_deaths_yll[["output"]]$value_lower_allgenders_yll_over_100_years_age_20_99,
-                   airqplus_pm_deaths_yll[["output"]]$value_upper_allgenders_yll_over_100_years_age_20_99))
+# check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_airqplus_org,
+#                result_vector_alternative =
+#                  c(airqplus_pm_deaths_yll[["output"]]$value_central_allgenders_yll_over_100_years_age_20_99,
+#                    airqplus_pm_deaths_yll[["output"]]$value_lower_allgenders_yll_over_100_years_age_20_99,
+#                    airqplus_pm_deaths_yll[["output"]]$value_upper_allgenders_yll_over_100_years_age_20_99))
 
 # Calculate years of life lost using new bestcost function
 # and input data from an AirQ+ case
 
 # Now with input data from the Swiss project GeLuft
-bestcost_pm_yll_lifetable_geluft <- 
-  bestcost::attribute_yll_from_lifetable(
-    exp_central = input_data_mortality$exp[2], #exp CH 2019
-    prop_pop_exp = 1,
-    cutoff = input_data_mortality$cutoff[2], # WHO AQG 2021 
-    rr_central = input_data_mortality[2,"rr_central"], 
-    rr_lower = input_data_mortality[2,"rr_lower"], 
-    rr_upper =input_data_mortality[2,"rr_upper"], 
-    erf_increment = 10, 
-    erf_shape = "log_linear",
-    first_age_pop = 0,
-    last_age_pop = 99,
-    prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
-    prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
-    prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
-    prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_midyear_male = lifetable_withPopulation[["male"]]$population, 
-    population_midyear_female = lifetable_withPopulation[["female"]]$population, 
-    year_of_analysis = 2019, 
-    corrected_discount_rate = 0,
-    info = input_data_mortality$pollutant[2], 
-    min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2])
-
-check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_geluft,
-               result_vector_alternative = c(27742, 14641, 40542))
+# bestcost_pm_yll_lifetable_geluft <- 
+#   bestcost::attribute_yll_from_lifetable(
+#     exp_central = input_data_mortality$exp[2], #exp CH 2019
+#     prop_pop_exp = 1,
+#     cutoff = input_data_mortality$cutoff[2], # WHO AQG 2021 
+#     rr_central = input_data_mortality[2,"rr_central"], 
+#     rr_lower = input_data_mortality[2,"rr_lower"], 
+#     rr_upper =input_data_mortality[2,"rr_upper"], 
+#     erf_increment = 10, 
+#     erf_shape = "log_linear",
+#     first_age_pop = 0,
+#     last_age_pop = 99,
+#     prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
+#     prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
+#     prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
+#     prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
+#     population_midyear_male = lifetable_withPopulation[["male"]]$population, 
+#     population_midyear_female = lifetable_withPopulation[["female"]]$population, 
+#     year_of_analysis = 2019, 
+#     info = input_data_mortality$pollutant[2], 
+#     min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2])
+# 
+# check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_geluft,
+#                result_vector_alternative = c(27742, 14641, 40542))
 
 ```
 
@@ -598,7 +599,6 @@ bestcost_pm_yll_exposure_single_year_lifetable_airqplus <-
     deaths_male = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
     deaths_female = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     year_of_analysis = 2019, 
-    corrected_discount_rate = 0,
     info = input_data_mortality$pollutant[2], 
     min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2])
 
@@ -670,6 +670,7 @@ print("YLL female 2019 identical:") ; round(yll_female) == round(675.25) # Value
 # Compare total YLL (YLL males + YLL females)
 airqplus_yll_difference <- read.xlsx("../testing/output/airqplus_deaths_yll_lifetable_adults.xlsx", sheet = "yll_difference", startRow = 1, rows = c(1:101))
 yll_total_rounded <- round(bestcost_pm_yll_lifetable_airqplus[["detailed"]][["interim"]][["pop_impact_nest"]][[3]] %>% select(-age_end))
+yll_total_unrouned <- bestcost_pm_yll_lifetable_airqplus[["detailed"]][["interim"]][["pop_impact_nest"]][[3]] %>% select(-age_end)
 
 print("2019 sum total YLLs (unrouded) identical:") # Value from AirQ+ output Excel
 1300.43 == round(sum(bestcost_pm_yll_lifetable_airqplus[["detailed"]][["interim"]][["pop_impact_nest"]][[3]]$population_2019), digits = 2)
@@ -680,6 +681,8 @@ print("2020 sum total YLLs (unrouded) identical:") # Value from AirQ+ output Exc
 3741.43 == round(sum(bestcost_pm_yll_lifetable_airqplus[["detailed"]][["interim"]][["pop_impact_nest"]][[3]]$population_2020, na.rm = TRUE), digits = 2)
 print("2020 total YLLs identical:")
 table(airqplus_yll_difference$`2020` == yll_total_rounded$population_2020)
+test <- tibble(airqplus_yll = airqplus_yll_difference$`2020`,
+               bestcost_yll = yll_total_rounded$population_2020)
 print("2020 absolute difference in YLLs:")
 print(abs(airqplus_yll_difference$`2020` - yll_total_rounded$population_2020))
 
@@ -789,7 +792,6 @@ bestcost_pm_yld_lifetable_geluft  <-
     year_of_analysis = 2019, 
     info = input_data_mortality$pollutant[2],
     min_age = input_data_mortality$min_age[2], # min_age = 20,
-    corrected_discount_rate = 0,
     duration = 100, 
     disability_weight = 1
   )
@@ -829,7 +831,6 @@ bestcost_pm_daly_lifetable_geluft  <-
     year_of_analysis = 2019, 
     info = input_data_mortality$pollutant[2],
     min_age = input_data_mortality$min_age[2], # min_age = 20,
-    corrected_discount_rate = 0,
     duration = 100, 
     disability_weight = 1
   )
